[package]
name = "octo-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.29.10"
pollster = "0.3"
wgpu = "0.19.1"
raw-window-handle = "0.5"
env_logger = "0.10"
thiserror = "1.0.50"
slotmap = "1.0.6"
bytemuck = { version = "1.14", features = [ "derive" ] }
glam = "0.24.2"
notify = "6.1.1"
egui = "0.26.2"
egui-wgpu = "0.26.2"
egui-winit = "0.26.2"